--- a/src/components/Body/index.css
+++ b/src/components/Body/index.css
@@ -1,4 +1,3 @@
-/* Write your CSS here */
 .body-container {
   display: flex;
   flex-direction: column;
@@ -6,6 +5,7 @@
   justify-content: center;
   align-self: stretch;
 }
+
 @media screen and (min-width: 768px) {
   .body-container {
     flex-direction: row;
@@ -15,14 +15,14 @@
     margin-bottom: 12px;
   }
 }
+
 .left-navbar {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   align-self: stretch;
   flex-wrap: wrap;
-  align-self: stretch;
   flex-shrink: 0;
   color: #475569;
   background-color: #e2e8f0;
@@ -31,6 +31,7 @@
   margin-top: 2px;
   margin-bottom: 2px;
 }
+
 @media screen and (min-width: 768px) {
   .left-navbar {
     justify-content: flex-start;
@@ -42,6 +43,7 @@
     margin-left: 2px;
   }
 }
+
 .list-items {
   display: flex;
   justify-content: center;
@@ -50,34 +52,40 @@
   margin: 0px;
   padding: 0px;
 }
+
 @media screen and (min-width: 768px) {
   .list-items {
     flex-direction: column;
   }
 }
+
 .item {
-  font-family: roboto;
+  font-family: 'Roboto';
   font-size: 20px;
   margin: 10px;
 }
+
 @media screen and (min-width: 768px) {
   .item {
     font-size: 24px;
   }
 }
+
 .body-header-text {
   color: #475569;
   text-align: center;
-  font-family: roboto;
+  font-family: 'Roboto';
   font-size: 18px;
   font-weight: 600;
 }
+
 @media screen and (min-width: 768px) {
   .body-header-text {
     text-align: left;
     font-size: 20px;
   }
 }
+
 .content {
   display: flex;
   flex-direction: column;
@@ -88,19 +96,22 @@
   margin-top: 6px;
   margin-bottom: 2px;
 }
+
 @media screen and (min-width: 768px) {
   .content {
     margin-right: 2px;
     margin-left: 2px;
   }
 }
+
 .content-text {
   color: #475569;
   text-align: center;
-  font-family: roboto;
+  font-family: 'Roboto';
   font-size: 20px;
   margin: 0px;
 }
+
 @media screen and (min-width: 768px) {
   .content-text {
     text-align: left;
@@ -108,6 +119,7 @@
     margin: 0px;
   }
 }
+
 .right-navbar {
   display: flex;
   flex-direction: column;
@@ -120,6 +132,7 @@
   margin-top: 2px;
   margin-bottom: 2px;
 }
+
 @media screen and (min-width: 768px) {
   .right-navbar {
     justify-content: flex-start;
@@ -131,28 +144,32 @@
     margin-left: 2px;
   }
 }
+
 .ad-box-container {
   display: flex;
   justify-content: center;
 }
+
 @media screen and (min-width: 768px) {
   .ad-box-container {
     flex-direction: column;
     width: 100%;
   }
 }
+
 .ad-box {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: roboto;
   color: #475569;
+  font-family: 'Roboto';
   font-size: 20px;
   height: 150px;
   width: 180px;
   border: 1px solid #64748b;
   margin: 5px;
 }
+
 @media screen and (min-width: 768px) {
   .ad-box {
     font-size: 24px;
