--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,18 +1,19 @@
-/* Write your CSS here */
-.footer-container{
-    text-align:center;
-    align-self:stretch;
-    background-color: #cbd5e1;
-    margin-bottom:64px;
+.footer-container {
+  text-align: center;
+  align-self: stretch;
+  background-color: #cbd5e1;
+  margin-bottom: 64px;
 }
-.footer-text{
-    color:#476659;
-    font-family:roboto;
-    font-size:32px;
-    font-weight:600;
+
+.footer-text {
+  color: #475569;
+  font-family: 'Roboto';
+  font-size: 32px;
+  font-weight: 600;
 }
-@media screen and (min-width:768px){
-    .footer-text{
-        font-size: 48px;
-    }
+
+@media screen and (min-width: 768px) {
+  .footer-text {
+    font-size: 48px;
+  }
 }
