--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,19 +1,20 @@
-/* Write your CSS here */
-/* Write your CSS here */
 .header-container {
   text-align: center;
   align-self: stretch;
   background-color: #cbd5e1;
-  margin-bottom: 64px;
+  margin-top: 64px;
 }
+
 .header-text {
-  color: #476659;
-  font-family: roboto;
+  color: #475569;
+  font-family: 'Roboto';
   font-size: 32px;
   font-weight: 600;
 }
+
 @media screen and (min-width: 768px) {
   .header-text {
     font-size: 48px;
   }
 }
+
